fixed-img-height

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="products-grid">
                 <div class="card">
-                    <img src="/assets/images/example-1.webp" alt="" height="300px"> 
+                    <img src="/assets/images/example-1.webp" alt=""> 
                 </div>
                 <div class="description">
                     <h3>Le Miswak Classique</h3>
@@ -87,10 +87,10 @@
                     <p>Tout comme vous, on en pouvais plus d'acheter nos Siwak et d'utiliser le tiers ou moins. Alors on l'a coupé tout simplement.</p>
                 </div>
                 <div class="card">
-                    <img src="/assets/images/example-2.webp" alt="" height="300px">
+                    <img src="/assets/images/example-2.webp" alt="">
                 </div>
                 <div class="card">
-                    <img src="/assets/images/example-3.webp" alt="" height="300px">
+                    <img src="/assets/images/example-3.webp" alt="">
                 </div>
                 <div class="description">
                 <h3>Smart Miswak</h3>
