--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <li><a href="#">La Boutique</a></li>
                 </ul>
             </nav>
-        </div>
+            <div class="menu-icon"></div>
+        </div> 
     </navbar>
 
     <section class="main">
