--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#">La Boutique</a></li>
                 </ul>
             </nav>
-            <div class="menu-icon"></div>
+            <div class="menu-icon"><img src="/assets/images/menu-icon.png" alt=""></div>
         </div> 
     </navbar>
 
